clusters/k3s/apps/minecraft/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minecraft
spec:
  selector:
    matchLabels:
      app: minecraft
  serviceName: "minecraft"
  replicas: 1
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      terminationGracePeriodSeconds: 120
      containers:
      - name: minecraft
        image: marctv/minecraft-papermc-server:1.21.4
        tty: true
        stdin: true
        ports:
        - containerPort: 25565
          name: minecraft
        volumeMounts:
        - mountPath: /data
          name: app

  volumeClaimTemplates:
  - metadata:
      name: app
    spec:
      storageClassName: local-path
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
