clusters/k3s/apps/minecraft/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: maps.devcw.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft
            port:
              number: 8100
