clusters/k3s/apps/minecraft/ingressroute-tcp.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft-tcp
spec:
  entryPoints:
    - minecraft
  routes:
  - match: HostSNI(`*`)
    services:
    - name: velocity
      port: 25577
